--- a/firstComponent.html
+++ b/firstComponent.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Component 1</title>
+    
+    <link rel="stylesheet" type: "text/css" href="./firstComponent.css"/>
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
@@ -13,10 +15,16 @@
     <script type="text/babel">
       class Pet extends React.Component {
          render() {
+           const liStyle = {fontSize: "1.5em"};
            return (
-             <div>
-             <h2>Picture above a Hill</h2>
-             <img src="https://i.imgur.com/SKGrXz7.jpg" alt="picture I took"/>
+             <div className="card">
+               <h2 className="name">Picture above a Hill</h2>
+               <img src="https://i.imgur.com/SKGrXz7.jpg" alt="picture I took"/>
+               <h5 style={{fontSize: "2em", margin: "2px"}}>Hobbies:</h5>
+               <ul>
+                 <li style={liStyle}>Sleep</li>
+                 <li style={liStyle}>Eat</li>
+               </ul>
              </div>
            );
          }  
