--- a/firstComponent/firstComponent.html
+++ b/firstComponent/firstComponent.html
@@ -13,18 +13,28 @@
   <body>
     <div id="app"></div>
     <script type="text/babel">
+      class Interests extends React.Component {
+        render() {
+          const liStyle = {fontSize: "1.5em"};
+          const hobbies = ["Sleeping", "Eating", "Climbing", "traveling"];
+          return(
+            <ul>
+              {hobbies.map(function(hobby, index) {
+                return <li style={liStyle} key={index}>{hobby}</li>
+              })}
+            </ul>
+          );
+        }
+      }
+
       class Pet extends React.Component {
          render() {
-           const liStyle = {fontSize: "1.5em"};
            return (
              <div className="card">
                <h2 className="name">Picture above a Hill</h2>
                <img src="https://i.imgur.com/SKGrXz7.jpg" alt="picture I took"/>
                <h5 style={{fontSize: "2em", margin: "2px"}}>Hobbies:</h5>
-               <ul>
-                 <li style={liStyle}>Sleep</li>
-                 <li style={liStyle}>Eat</li>
-               </ul>
+               <Interests />               
              </div>
            );
          }  
